# lem-in

./: #Makefile#  .clang-format  CMakeLists.txt  Makefile  README.md  author  big  big.map  flow-one  flow-ten  flow-thousand  flow_one.map  lem-in  map1.txt  result  space_amatilda_test  sub.test2  super_big.map  test  test.map  test1.txt  test2  testOfWeb  testing
.github/: workflows.yml
.github/workflows/: c-cpp.yml
42maps/: big  big-superposition  flow-one  flow-ten  flow-thousand
includes/: lem_in.h
includes copy/: lem_in.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
maps/: big.map  flow-one.map  flow-ten.map  flow-thousand  flow-thousand.map  sub.test  thousand.map
maps/error/links/: invalid_end_name.map
maps/error/locations/: ant_number_negative.map  ant_number_too_big.map  ant_number_zero.map  invalid_name.map  no_empty_line.map
maps/error/rooms/: coordinates_duplicate.map  name_duplicate.map
maps/valid/vs/one_way/: 1.map
src/: Protocol  ants_movement.c  ants_moving.c  bfs.c  bfs_old.c  delete.c  equal_rooms.c  free_sources.c  ft_solution.c  ideas  instruments.c  liba.c  main.c  main.cpp  marking_and_clearing.c  movements.c  parse_edges.c  parse_rooms.c  parser.c  parsers_utilits.c  print_strings.c  record_way.c  record_ways_to_array.c  recorder_way.c  solution.c  start_actions.c  utilits.c  ways_recorder.c
src copy/: liba.c  main.c  parser.c  sort_rooms.c
src copy/libft/: ft_strcmp.c
src/libft/: .Makefile.swp  .main.c.swp  Makefile  author  ft_array_subtract.c  ft_atoi.c  ft_bbtree_utils.c  ft_bsort_int.c  ft_bzero.c  ft_copy_ptree.c  ft_is_escaped.c  ft_is_part_of_word.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddstart.c  ft_lstappend.c  ft_lstdel.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_max_int.c  ft_maxval_int.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min_int.c  ft_minval_int.c  ft_num_word.c  ft_path_append.c  ft_print_array.c  (+44 more)
src/libft/ft_printf/: conv_int2.c  find_action.c  printf.h
src/libft/ftoa/: ftoa.c
src/libft/includes/: bbtree_utils.h  ft_ptree.h  get_next_line.h  libft.h
