cmake_minimum_required(VERSION 3.16)
project(lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(src/libft/ft_printf)
include_directories(src/libft/ftoa)
include_directories(src/libft/includes)

add_executable(lem_in
        includes/lem_in.h
        src/libft/ft_printf/apply_spec.c
        src/libft/ft_printf/apply_spec.h
        src/libft/ft_printf/apply_spec2.c
        src/libft/ft_printf/apply_spec3.c
        src/libft/ft_printf/apply_spec4.c
        src/libft/ft_printf/apply_spec5.c
        src/libft/ft_printf/apply_spec6.c
        src/libft/ft_printf/arg_extractors.c
        src/libft/ft_printf/arg_extractors2.c
        src/libft/ft_printf/conv_int.c
        src/libft/ft_printf/conv_int2.c
        src/libft/ft_printf/conv_other.c
        src/libft/ft_printf/conv_wrappers_int.c
        src/libft/ft_printf/conv_wrappers_int2.c
        src/libft/ft_printf/conv_wrappers_other.c
        src/libft/ft_printf/find_action.c
        src/libft/ft_printf/fp_type.h
        src/libft/ft_printf/fprintf.c
        src/libft/ft_printf/printf.c
        src/libft/ft_printf/printf.h
        src/libft/ft_printf/read_spec.c
        src/libft/ft_printf/read_spec.h
        src/libft/ft_printf/read_spec2.c
        src/libft/ftoa/decimal_arithmetic.c
        src/libft/ftoa/decimal_arithmetic2.c
        src/libft/ftoa/decimal_arithmetic3.c
        src/libft/ftoa/decimal_arithmetic4.c
        src/libft/ftoa/decimal_arithmetic5.c
        src/libft/ftoa/ft_fp.h
        src/libft/ftoa/ftoa.c
        src/libft/ftoa/ftoa2.c
        src/libft/includes/bbtree_utils.h
        src/libft/includes/ft_ptree.h
        src/libft/includes/get_next_line.h
        src/libft/includes/libft.h
        src/libft/ft_array_subtract.c
        src/libft/ft_atoi.c
        src/libft/ft_bbtree_utils.c
        src/libft/ft_bsort_int.c
        src/libft/ft_bzero.c
        src/libft/ft_copy_ptree.c
        src/libft/ft_del.c
        src/libft/ft_is_escaped.c
        src/libft/ft_is_part_of_word.c
        src/libft/ft_isalnum.c
        src/libft/ft_isalpha.c
        src/libft/ft_isascii.c
        src/libft/ft_isdigit.c
        src/libft/ft_isprint.c
        src/libft/ft_itoa.c
        src/libft/ft_itoa_base.c
        src/libft/ft_lstadd.c
        src/libft/ft_lstaddstart.c
        src/libft/ft_lstdel.c
        src/libft/ft_lstdelone.c
        src/libft/ft_lstiter.c
        src/libft/ft_lstlen.c
        src/libft/ft_lstmap.c
        src/libft/ft_lstnew.c
        src/libft/ft_max_int.c
        src/libft/ft_maxval_int.c
        src/libft/ft_memalloc.c
        src/libft/ft_memccpy.c
        src/libft/ft_memchr.c
        src/libft/ft_memcmp.c
        src/libft/ft_memcpy.c
        src/libft/ft_memdel.c
        src/libft/ft_memdup.c
        src/libft/ft_memmove.c
        src/libft/ft_memset.c
        src/libft/ft_min_int.c
        src/libft/ft_minval_int.c
        src/libft/ft_path_append.c
        src/libft/ft_print_array.c
        src/libft/ft_ptree.c
        src/libft/ft_ptree_to_kvpairs.c
        src/libft/ft_putchar.c
        src/libft/ft_putchar_fd.c
        src/libft/ft_putendl.c
        src/libft/ft_putendl_fd.c
        src/libft/ft_putnbr.c
        src/libft/ft_putnbr_fd.c
        src/libft/ft_putstr.c
        src/libft/ft_putstr_fd.c
        src/libft/ft_straddchar.c
        src/libft/ft_strcat.c
        src/libft/ft_strchr.c
        src/libft/ft_strclr.c
        src/libft/ft_strcmp.c
        src/libft/ft_strcpy.c
        src/libft/ft_strdel.c
        src/libft/ft_strdup.c
        src/libft/ft_strequ.c
        src/libft/ft_striter.c
        src/libft/ft_striteri.c
        src/libft/ft_strjoin.c
        src/libft/ft_strlcat.c
        src/libft/ft_strlen.c
        src/libft/ft_strmap.c
        src/libft/ft_strmapi.c
        src/libft/ft_strncat.c
        src/libft/ft_strncmp.c
        src/libft/ft_strncpy.c
        src/libft/ft_strnequ.c
        src/libft/ft_strnew.c
        src/libft/ft_strnstr.c
        src/libft/ft_strrchr.c
        src/libft/ft_strrev.c
        src/libft/ft_strsplit.c
        src/libft/ft_strsplit_unescaped.c
        src/libft/ft_strstr.c
        src/libft/ft_strsub.c
        src/libft/ft_strtrim.c
        src/libft/ft_swap.c
        src/libft/ft_swapint.c
        src/libft/ft_tolower.c
        src/libft/ft_toupper.c
        src/libft/get_next_line.c
        src/bfs.c
        src/equal_rooms.c
        src/ft_solution.c
        src/instruments.c
        src/liba.c
        src/main.c
        src/movements.c
        src/parse_edges.c
        src/parse_rooms.c
        src/parser.c
        src/parsers_utilits.c
        src/recorder_way.c)
