cmake_minimum_required(VERSION 3.16)
project(GitLem_In C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(src/libft/includes)

add_executable(GitLem_In
        includes/lem_in.h
        src/libft/includes/bbtree_utils.h
        src/libft/includes/get_next_line.h
        src/libft/includes/libft.h
        src/libft/ft_array_subtract.c
        src/libft/ft_atoi.c
        src/libft/ft_bbtree_utils.c
        src/libft/ft_bsort_int.c
        src/libft/ft_bzero.c
        src/libft/ft_del.c
        src/libft/ft_isalnum.c
        src/libft/ft_isalpha.c
        src/libft/ft_isascii.c
        src/libft/ft_isdigit.c
        src/libft/ft_isprint.c
        src/libft/ft_itoa.c
        src/libft/ft_itoa_base.c
        src/libft/ft_lstadd.c
        src/libft/ft_lstappend.c
        src/libft/ft_lstdel.c
        src/libft/ft_lstdelone.c
        src/libft/ft_lstiter.c
        src/libft/ft_lstmap.c
        src/libft/ft_lstnew.c
        src/libft/ft_max_int.c
        src/libft/ft_maxval_int.c
        src/libft/ft_memalloc.c
        src/libft/ft_memccpy.c
        src/libft/ft_memchr.c
        src/libft/ft_memcmp.c
        src/libft/ft_memcpy.c
        src/libft/ft_memdel.c
        src/libft/ft_memdup.c
        src/libft/ft_memmove.c
        src/libft/ft_memset.c
        src/libft/ft_min_int.c
        src/libft/ft_minval_int.c
        src/libft/ft_num_word.c
        src/libft/ft_print_array.c
        src/libft/ft_putchar.c
        src/libft/ft_putchar_fd.c
        src/libft/ft_putendl.c
        src/libft/ft_putendl_fd.c
        src/libft/ft_putnbr.c
        src/libft/ft_putnbr_fd.c
        src/libft/ft_putstr.c
        src/libft/ft_putstr_fd.c
        src/libft/ft_strcat.c
        src/libft/ft_strchr.c
        src/libft/ft_strclr.c
        src/libft/ft_strcmp.c
        src/libft/ft_strcpy.c
        src/libft/ft_strdel.c
        src/libft/ft_strdup.c
        src/libft/ft_strequ.c
        src/libft/ft_striter.c
        src/libft/ft_striteri.c
        src/libft/ft_strjoin.c
        src/libft/ft_strlcat.c
        src/libft/ft_strlen.c
        src/libft/ft_strmap.c
        src/libft/ft_strmapi.c
        src/libft/ft_strncat.c
        src/libft/ft_strncmp.c
        src/libft/ft_strncpy.c
        src/libft/ft_strnequ.c
        src/libft/ft_strnew.c
        src/libft/ft_strnstr.c
        src/libft/ft_strrchr.c
        src/libft/ft_strrev.c
        src/libft/ft_strsplit.c
        src/libft/ft_strstr.c
        src/libft/ft_strsub.c
        src/libft/ft_strtrim.c
        src/libft/ft_swap.c
        src/libft/ft_swapint.c
        src/libft/ft_tolower.c
        src/libft/ft_toupper.c
        src/libft/get_next_line.c
        src/ants_moving.c
        src/bfs.c
        src/equal_rooms.c
        src/free_sources.c
        src/liba.c
        src/main.c
        src/marking_and_clearing.c
        src/parse_edges.c
        src/parse_rooms.c
        src/parser.c
        src/parsers_utilits.c
        src/print_strings.c
        src/record_way.c
        src/record_ways_to_array.c
        src/start_actions.c)
